backup/examples/core/errors/syntax_errors/02_leading_arrow.core.tao
// Parse Error: Arrow without left-hand side
// An arrow must be preceded by an identifier (lambda parameter)
-> x
